--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <h2>Invista na sua primeira venda</h2>
             <p class="price">R$ 19,90</p>
             <p>Acesso imediato ao guia + método validado</p>
-            <a href="#" class="cta">Comprar agora</a>
+            <a href="https://pay.cakto.com.br/393b4r7_709813" class="cta">Comprar agora</a>
         </div>
     </section>
 
@@ -191,5 +191,6 @@
     </footer>
 
 </body>
+
 
 </html>
